# lrose-reorder

./: .gitignore  ChangeLog  Makefile.am  Makefile.in  QUICKSTART  README  README.md  README.txt  SConstruct  config.h.in  configure  configure.ac  rm_Makefile.in  run_autoconf
Applications/: Makefile.am
Applications/qreod/: Makefile.am
Applications/qreou/: Makefile.am
Libraries/: Makefile.am
Libraries/dap/: Makefile.am
Libraries/qreo/: Makefile.am
Libraries/s2/: Makefile.am
apps/: Makefile.in
apps/qreod/: Makefile.am  Makefile.in
apps/qreou/: Makefile.am  Makefile.in  fofclibPlus.c
docs/: unixqreola.ps  unixreorder.ps
examples/: kdax_runreo  reorder_params
examples/dorade/: swp.1110216070116.KDAX.0.0.5_PPI_v2  swp.1110216070149.KDAX.0.0.9_PPI_v3  swp.1110216070221.KDAX.0.1.3_PPI_v4  swp.1110216070253.KDAX.0.1.8_PPI_v5  swp.1110216070308.KDAX.0.2.4_PPI_v6  swp.1110216070323.KDAX.0.3.1_PPI_v7  swp.1110216070337.KDAX.0.4.0_PPI_v8  swp.1110216070352.KDAX.0.5.1_PPI_v9  swp.1110216070405.KDAX.0.6.4_PPI_v10  swp.1110216070419.KDAX.0.8.0_PPI_v11  swp.1110216070432.KDAX.0.10.0_PPI_v12  swp.1110216070446.KDAX.0.12.5_PPI_v13  swp.1110216070459.KDAX.0.15.6_PPI_v14  swp.1110216070513.KDAX.0.19.5_PPI_v15
libs/: Makefile.in  SConscript
libs/dap/: Makefile.am  Makefile.in  dap_common.c
libs/qreo/: Makefile.am  Makefile.in  fofclib.c  foflib.F  qreo1.F  qreo2.F  qreo3.F  xcedcio.c
libs/s2/: Makefile.am  Makefile.in  fof_dd.c
